--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### Example user template template
-### Example user template
+### Example member template template
+### Example member template
 
 # IntelliJ project files
 *.iml
