add weather api

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,14 @@
       <version>1.7.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+    <!-- 날씨 API를 위한 library -->
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
